Polish#3 website - Update home page - Update about page - Add FontAwesomeLogo component - Fix ':' not showing up in chat. - Move todo list from README

--- a/Pages/About/About.razor.css
+++ b/Pages/About/About.razor.css
@@ -21,18 +21,14 @@
     padding: 48px;
     z-index: 10;
     display: flex;
-    align-items: stretch;
+    flex-direction: column;
+    gap: 48px;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 10%;
+    margin-top: 0%;
 }
 
-.about-paragraph {
-    flex-basis: 0;
-    flex-grow: 1;
-}
-
-.about-paragraph p {
+.about-text {
     color:white;
     font-size: 1.5rem;
 }
@@ -40,13 +36,19 @@
 .heading {
     color: white;
     font-size: 3rem;
+    border-bottom: 2px solid var(--accent-color);
 }
 
-.skills {
-    color:white;
-    font-size: 1.5rem;
-    flex-basis: 0;
-    flex-grow: 1;
+.heading2 {
+    color: white;
+    font-size: 2rem;
+    border-bottom: 2px solid var(--accent-color);
+}
+
+.logo-group {
+    display: flex;
+    gap: 32px;
+    margin-top: 16px;
 }
 
 @media (max-width: 768px) {
@@ -63,5 +65,13 @@
 
     .heading {
         font-size: 2rem;
+    }
+
+    .heading2 {
+        font-size: 1.5rem;
+    }
+
+    .logo-group {
+        flex-wrap: wrap;
     }
 }
