--- a/Pages/Home/Home.razor.css
+++ b/Pages/Home/Home.razor.css
@@ -34,14 +34,27 @@
     top: 32px;
     display: flex;
     gap: 10px;
-    align-items: center;
     padding: 10px;
     padding-left: 0;
+    color: white;
+    flex-direction: column;
+    font-size: 1.3rem;
 }
 
-.learn-more-text {
-    color: white;
+.click-me-span {
     font-size: 1.5rem;
+    font-weight: bold;
+    border-bottom: 2px solid var(--accent-color);
+}
+
+.no-decoration, .no-decoration:visited, .no-decoration:hover, .no-decoration:active {
+    text-decoration: none;
+    color: inherit;
+}
+
+.click-me-span:hover {
+    cursor: pointer;
+    color: var(--accent-color);
 }
 
 .about-link {
